hphp/hack/test/typecheck/class_level_where_clauses/this_as/interface_method_lookup_10.php.exp
File "interface_method_lookup_10.php", line 26, characters 14-16:
No method 'foo' in I (Typing[4053])
File "interface_method_lookup_10.php", line 25, characters 16-16:
This is why I think it is an object of type I
File "interface_method_lookup_10.php", line 15, characters 11-11:
Declaration of I is here
File "interface_method_lookup_10.php", line 30, characters 14-16:
No method 'foo' in C (Typing[4053])
File "interface_method_lookup_10.php", line 29, characters 16-16:
This is why I think it is an object of type C
File "interface_method_lookup_10.php", line 13, characters 7-7:
Declaration of C is here
